增加了一个百度推广的验证和数据的配置

--- a/web/src/main/webapp/WEB-INF/db.properties
+++ b/web/src/main/webapp/WEB-INF/db.properties
@@ -1,4 +1,4 @@
-password=123456
-jdbcUrl=jdbc:mysql://demo.blog.zrlog.com:3306/zrlog_demo?&characterEncoding=UTF-8&useSSL=false
-user=zrlog_demo
+password=sunLU520
+jdbcUrl=jdbc:mysql://127.0.0.1:3306/zrlog?&characterEncoding=UTF-8&useSSL=false
+user=zrlog
 driverClass=com.mysql.cj.jdbc.Driver
